// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a question, list of answers to pick, 'next question' and 'quit' buttons 1`] = `
<div
  className="componentContainer"
>
  <div
    id="quizStartTitle"
  >
    test
  </div>
  <div
    id="quizStartContainer"
  >
    <div
      id="questionDetailsContainer"
    >
      <div
        className="sectionSpacing"
        id="questionContainer"
      >
        <div
          className="title-medium-left-alt"
        >
          Question 1
        </div>
        <div>
          test
        </div>
      </div>
      <img
        alt=""
        id="quizBot2"
        src="quizBot2.png"
      />
    </div>
    <div
      id="answerFormContainer"
    >
      <div
        id="pickAnswerForm"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            id="answerContainer"
          >
            <div
              className="title-medium-left-alt"
            >
              Answers
            </div>
            <div>
              <label>
                <input
                  checked={false}
                  className="radioInput"
                  name="answer"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="test"
                />
                test
              </label>
            </div>
            <div>
              <label>
                <input
                  checked={false}
                  className="radioInput"
                  name="answer"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="test2"
                />
                test2
              </label>
            </div>
          </div>
          <img
            alt=""
            src="reply.png"
          />
          <div
            className="buttonContainer"
          >
            <button
              className="submit quizButton-left"
              data-testid="next-button"
            >
              Next Question
            </button>
            <button
              className="submit quizButton-right"
              data-testid="quit-button"
              onClick={[Function]}
            >
              Quit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the results 1`] = `
<div
  className="componentContainer"
>
  <div
    id="quizStartTitle"
  >
    test
  </div>
  <div
    id="quizStartContainer"
  >
    <div
      id="questionDetailsContainer"
    >
      <div
        className="sectionSpacing"
        id="questionContainer"
      >
        <div
          className="title-medium-left-alt"
        >
          Question 1
        </div>
        <div>
          test
        </div>
      </div>
      <img
        alt=""
        id="quizBot2"
        src="quizBot2.png"
      />
      <div
        className="title-large"
        id="quizResult"
      >
        <b>
          You scored 1 out of 2
        </b>
      </div>
    </div>
    <div
      id="answerFormContainer"
    >
      <div
        id="pickAnswerForm"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            id="answerContainer"
          >
            <div
              className="title-medium-left-alt"
            >
              Answers
            </div>
            <div>
              <label>
                <input
                  checked={false}
                  className="radioInput"
                  name="answer"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="test"
                />
                test
              </label>
            </div>
            <div>
              <label>
                <input
                  checked={false}
                  className="radioInput"
                  name="answer"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="test2"
                />
                test2
              </label>
            </div>
          </div>
          <img
            alt=""
            src="reply.png"
          />
          <div
            className="buttonContainer"
          >
            <button
              className="submit quizButton-left"
              data-testid="next-button"
            >
              Finish
            </button>
            <button
              className="submit quizButton-right"
              data-testid="quit-button"
              onClick={[Function]}
            >
              Quit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
